--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 <body>
 
     <div class="navbar">
-        <img src="Logo.jpg" alt="4T Sneakers Logo">
+        <img src="Logo web.png" alt="4T Sneakers Logo">
         <h1>4T SNEAKERS</h1>
     </div>
 
