--- a/index.html
+++ b/index.html
@@ -126,14 +126,16 @@
     <span style="margin: 0 10px; color: #ffffff;">atau</span>
     <button onclick="window.location.href='https://instagram.com/Horee.69'">Contact via Instagram</button>
 </div>
+
         <div class="product">
-            <img src="Sepatu futsal.png" alt="Casual Shoes">
-            <h3>Casual Shoes</h3>
-            <p>Stylish shoes for everyday wear</p>
-            <    <button onclick="window.location.href='metode pembayaran.html'">Buy Now</button>
+            <img src="Sepatu futsal.png" alt="Running Shoes">
+            <h3>Running Shoes</h3>
+            <p>Perfect for jogging and running</p>
+    <button onclick="window.location.href='metode pembayaran.html'">Buy Now</button>
     <span style="margin: 0 10px; color: #ffffff;">atau</span>
     <button onclick="window.location.href='https://instagram.com/Horee.69'">Contact via Instagram</button>
 </div>
+
     </div>
 
     <div class="footer">
